--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "preact build",
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "preact watch",
-    "lint": "eslint src"
+    "lint": "eslint \"src/**/*.{js,jsx}\""
   },
   "eslintConfig": {
     "extends": "preact"
@@ -18,11 +18,15 @@
   "devDependencies": {
     "eslint": "^7.17.0",
     "eslint-config-preact": "^1.1.3",
-    "preact-cli": "^3.0.0",
+    "preact-cli": "^3.2.2",
+    "sass-loader": "^10.2.0",
     "sirv-cli": "^1.0.3"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "preact": "^10.1.0",
-    "preact-render-to-string": "^5.1.2"
+    "preact-render-to-string": "^5.1.2",
+    "sass": "^1.37.5",
+    "unistore": "^3.5.2"
   }
 }
