--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "jtd": "^0.1.1",
     "preact": "^10.1.0",
     "preact-render-to-string": "^5.1.2",
     "sass": "^1.37.5",
