--- a/push-manifest.json
+++ b/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"bundle.70b82.css":{"type":"style","weight":1},"bundle.067ef.esm.js":{"type":"script","weight":1}}}
+{"/":{"bundle.2f168.css":{"type":"style","weight":1},"bundle.ba5ff.esm.js":{"type":"script","weight":1}}}
