--- a/push-manifest.json
+++ b/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"bundle.2f168.css":{"type":"style","weight":1},"bundle.ba5ff.esm.js":{"type":"script","weight":1}}}
+{"/":{"bundle.8cab4.css":{"type":"style","weight":1},"bundle.27ce7.esm.js":{"type":"script","weight":1}}}
