--- a/push-manifest.json
+++ b/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"bundle.3f38a.css":{"type":"style","weight":1},"bundle.da6d4.esm.js":{"type":"script","weight":1}}}
+{"/":{"bundle.5da17.css":{"type":"style","weight":1},"bundle.d5019.esm.js":{"type":"script","weight":1}}}
