--- a/push-manifest.json
+++ b/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"bundle.5da17.css":{"type":"style","weight":1},"bundle.db30a.esm.js":{"type":"script","weight":1}}}
+{"/":{"bundle.5da17.css":{"type":"style","weight":1},"bundle.c7d93.esm.js":{"type":"script","weight":1}}}
