Change application name

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "convopad",
-  "short_name": "convopad",
+  "name": "chatterscribe",
+  "short_name": "chatterscribe",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
