--- a/push-manifest.json
+++ b/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"bundle.7fb96.css":{"type":"style","weight":1},"bundle.df038.esm.js":{"type":"script","weight":1}}}
+{"/":{"bundle.7fb96.css":{"type":"style","weight":1},"bundle.a207e.esm.js":{"type":"script","weight":1}}}
