--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "preact build --no-prerender --dest public",
-    "serve": "sirv build --port 8080 --cors --single",
-    "dev": "preact watch",
-    "lint": "eslint \"src/**/*.{js,jsx}\""
+    "build": "NODE_ENV=production webpack build",
+    "dev": "webpack serve",
+    "lint": "eslint \"src/**/*.{ts,tsx}\""
   },
   "eslintConfig": {
     "extends": "preact"
@@ -16,19 +15,46 @@
     "build/*"
   ],
   "devDependencies": {
-    "eslint": "^7.17.0",
+    "@babel/core": "^7.19.0",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "@babel/preset-env": "^7.19.0",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/lodash.merge": "^4.6.7",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "autoprefixer": "^10.4.8",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-macros": "^3.1.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
+    "eslint": "^7.32.0",
     "eslint-config-preact": "^1.1.3",
-    "preact-cli": "^3.2.2",
-    "sass-loader": "^10.2.0",
-    "sirv-cli": "^1.0.3"
+    "eslint-plugin-react": "^7.31.8",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "html-webpack-plugin": "^5.5.0",
+    "if-env": "^1.0.4",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss-loader": "^7.0.1",
+    "progress-bar-webpack-plugin": "^2.1.0",
+    "sass": "^1.54.9",
+    "sass-loader": "^10.3.1",
+    "size-plugin": "^3.0.0",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.6",
+    "typescript": "^4.8.3",
+    "webpack": "^5.74.0",
+    "webpack-bundle-analyzer": "^4.6.1",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0",
+    "webpack-merge": "^5.8.0",
+    "webpack-remove-empty-scripts": "^0.8.4"
   },
   "dependencies": {
     "classnames": "^2.3.1",
     "jtd": "^0.1.1",
     "lodash.merge": "^4.6.2",
     "preact": "^10.1.0",
-    "preact-render-to-string": "^5.1.2",
-    "sass": "^1.37.5",
     "unistore": "^3.5.2"
   }
 }
